Added rank system
removed ScoreboardListener.java cause it broke lol

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -16,3 +16,6 @@ commands:
     usage: /fly
     description: Toggle your fly mode
     permission: lifesteal.fly
+  rank:
+    usage: /rank
+    description: Edit ranks
