Added a report system thats linked with discord webhooks
Changed the main color from Yellow to Gold

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -16,4 +16,8 @@ commands:
     usage: /fly
     description: Toggle your fly mode
     permission: lifesteal.fly
+  report:
+    usage: /report <player>
+    description: Report a player to the server staff
+
 
