- Added player tracker for diamonds - Added heart item that adds 1 heart to the player - Added jumpscares with a 0.0001% chance of happening - Fixed the rank listener - Added RTP - Added Maintenance mode

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -19,5 +19,15 @@ commands:
   report:
     usage: /report <player>
     description: Report a player to the server staff
-
-
+  rtp:
+    usage: /rtp <player>
+    description: Randomly teleport to a random possible location
+    permission: lifesteal.rtp
+  customheartgiver:
+    usage: /customheartgiver
+    description: Give you a heart item
+    permission: lifesteal.heartitemgiver
+  maintenancemode:
+    usage: /maintenancemode
+    description: Toggle maintenance mode
+    permission: lifesteal.maintenancemode
