- Added the starting to a crates plugin - redid the ItemManager because it was broken and count handle other items - fixed bugs

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -31,3 +31,7 @@ commands:
     usage: /maintenancemode
     description: Toggle maintenance mode
     permission: lifesteal.maintenancemode
+  crategive:
+    usage: /givecrate
+    description: Give you a crate
+    permission: lifesteal.crategive
