Idk what i added - NOTE FIX A ISSUE THAT WHEN A PLAYER DIES BY ANY OTHER MEANS THEY DONT LOSE HEARTS

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -42,3 +42,6 @@ commands:
   playerinfo:
     usage: /playerinfo <player>
     description: Get information about a player (ADMIN ONLY)
+  discord:
+    usage: /discord
+    description: sends the player a discord link
