--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -68,3 +68,8 @@ commands:
   clearchat:
     usage: /clearchat
     description: Clear the chat
+  plugins:
+    usage: /plugins
+    description: yes
+    aliases:
+      - pl
