did stuff (Gotta finish HelpGUI.java)

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -73,3 +73,8 @@ commands:
     description: yes
     aliases:
       - pl
+  help:
+    usage: /help
+    description: yes
+    aliases:
+      - ?
